--- a/style.css
+++ b/style.css
@@ -32,21 +32,7 @@ body{
   border-radius: 100px;
   border: 5px solid;
 }
-#cajas{
-  
-  margin: 30px;
-  height: auto;
-  width: 200px;
-  border: 3px solid white;
-  border-radius: 20px;
-  box-shadow: inset 0px 0px 20px white;
-  
-}
-#cajas:hover{
-  border-color: greenyellow;
-  scale: 110%;
-  box-shadow: inset 0px 0px 20px greenyellow;
-}
+
 h1{
   color: white;
   
@@ -64,7 +50,6 @@ p{
 }
 #btnencrip{
   border: 2px solid white;
-  background-image: url(/img/matrix.gif);
   border-radius: 50%;
   height: 100px;
   width: 100px;
@@ -127,4 +112,31 @@ i{
   opacity: 30%;
   text-shadow: 0px 0px 40px white;
 }
-
+#linkPage{
+  color: white;
+  font-size: 50px;
+  text-decoration: none;
+  margin: 15px;
+}
+#linkPage:hover{
+  color: greenyellow;
+  text-shadow: 0px 0px 40px greenyellow;
+  transform: scale(120%);
+}
+#cont2{
+  margin: 0 auto;
+  display: flex;
+}
+#cajas{
+  
+  margin: 15px;
+  height: auto;
+  width: 200px;
+  border: 3px solid white;
+  border-radius: 20px;
+  box-shadow: inset 0px 0px 20px white;
+  
+}
+#cajas:hover{
+  transform: scale(105%);
+}
