--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
+:root{
+  --colorfondo: #232527 ;
+  --sombra-perfil:0px 0px 38px white;
+  --text-color: white;
+  --bgcv : black;
+  --color-green: black;
+  --color-red: white;
+  --color-button: gray;
+  --color-black: #000;
+}
+body.ligth-theme{
+    --colorfondo: white ;
+    --sombra-perfil:0px 0px 38px black;
+    --text-color: black;
+    --bgcv : wheat;
 
+
+
+
+}
 body{
   
-  background: #232527;
+  background: var(--colorfondo);
   text-align: center;
   max-width: auto;
   min-width: auto;
@@ -24,7 +43,7 @@ body{
 #perfil{
   max-width: 180px;
   border-radius: 100px;
-  box-shadow: 0px 0px 30px white;
+  box-shadow: var(--sombra-perfil);
 }
 #imgCryp{
   max-width: 160px;
@@ -33,28 +52,20 @@ body{
   border: 5px solid;
 }
 
-h1{
-  color: white;
+h1,h2,h3,p,span{
+  color: var(--text-color);
   
 }
-h2{
-  color: white;
-}
-h3{
-    color: white;
 
-}
-p{
-    color: white;
-    
-}
 #btnencrip{
   margin-bottom: 15px;
-  border: 2px solid white;
+  border: 2px solid;
+  border-color: var(--text-color);
   border-radius: 50%;
   height: 100px;
   width: 100px;
-  color: white;
+  color: var(--text-color);
+
   
 }
 @keyframes btnrotar{
@@ -69,7 +80,7 @@ p{
   }
 }
 i{
-  color: white;
+  color: var(--text-color);
   font-size: 50px;
   animation: rotar linear 6s infinite ;
 }
@@ -99,7 +110,7 @@ i{
 #nombre{
   position: absolute;
   margin: 0 auto;
-  color: white;
+  color: var(--text-color);
   width: 20% ;
   opacity: 0%;
 }
@@ -110,12 +121,12 @@ i{
   transform: rotateY(0) !important;
   animation-play-state: paused;
   opacity: 30%;
-  text-shadow: 0px 0px 40px white;
+  text-shadow: var(--sombra-perfil);
 }
 #linkPage{
   
   width:40%;
-  color: white;
+  color: var(--text-color);
   font-size: 50px;
   text-decoration: none;
   margin: 3%;
@@ -133,11 +144,13 @@ i{
 #cajas{
   margin: 0 auto;
   margin-top: 20px;
+  margin-bottom: 20px;
   height: auto;
   width: 40%;
-  border: 3px solid white;
+  border: 3px solid ;
+  border-color: var(--text-color);
   border-radius: 20px;
-  box-shadow: inset 0px 0px 20px white;
+  box-shadow: inset 0px 0px 20px var(--text-color);
   
 }
 #cajas:hover{
@@ -148,17 +161,14 @@ i{
     text-align: center;
     display: flex;
     text-align: center;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--bgcv);
 }
 footer {
     margin: 0 auto;
     height: 200px;
 }
-span{
-  color: white;
-}
 #cv{
-  background: black;
+  background:  var(--bgcv) ;
   height: 130px;
 }
 #downcv{
@@ -172,4 +182,37 @@ span{
     transform: scale(120%);
     
 
+}
+
+}
+.switch-button {
+    display: inline-block;
+}
+.switch-button .switch-button__checkbox {
+    display: none;
+}
+.switch-button .switch-button__label {
+    background-color: var(--color-red);
+    width: 5rem;
+    height: 3rem;
+    border-radius: 3rem;
+    display: inline-block;
+    position: relative;
+}
+.switch-button .switch-button__label:before {
+    transition: .2s;
+    display: block;
+    position: absolute;
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--color-button);
+    content: '';
+    border-radius: 50%;
+    box-shadow: inset 0px 0px 0px 1px var(--color-black);
+}
+.switch-button .switch-button__checkbox:checked + .switch-button__label {
+    background-color: var(--color-green);
+}
+.switch-button .switch-button__checkbox:checked + .switch-button__label:before {
+    transform: translateX(2rem);
 }
