--- a/style.css
+++ b/style.css
@@ -251,16 +251,16 @@ footer {
 }
 .switch-button {
     display: inline-block;
-    width: 40%
+    width: 30%
 }
 .switch-button .switch-button__checkbox {
     display: none;
 }
 .switch-button .switch-button__label {
     background-color: var(--color-red);
-    width: 80px;
-    height: 50px;
-    border-radius: 50px;
+    width: 60px;
+    height: 30px;
+    border-radius: 30px;
     display: inline-block;
     position: relative;
 }
@@ -268,8 +268,8 @@ footer {
     transition: .2s;
     display: block;
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     background-color: var(--color-button);
     content: '';
     border-radius: 50%;
@@ -295,16 +295,21 @@ footer {
   margin: 0 auto;
   margin: 5px;
   z-index: -2;
-  width: 60%;
+  width: 70%;
   border: solid var(--relojfondo);
   box-shadow: inset 0px 0px 40px var(--relojfondo);
   border-radius: 20px;
   height: 100px;
   animation: tictoc 1s linear infinite;
+  animation-play-state: paused;
 }
 @keyframes tictoc{
   0%{
-    box-shadow: inset 0px 0px 40px greenyellow;
+    box-shadow: inset 0px 0px 30px paleturquoise;
+  }
+  100%{
+      box-shadow: inset 0px 0px 60px black;
+
   }
 }
 .reloj .unidades{
